--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,10 @@
 <my-app>loading</my-app>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>ANGULAR</title>
+  </head>
+  <body>
+    <app-root></app-root>
+    </body>
+</html>
